# winesynth

./: .gitignore  CMakeLists.txt  README.md  mingw-w64-toolchain.cmake  vstgui-vst3-wine-toolchain.md
resources/: moduleinfo.json
source/: controller.cpp  controller.h  controls.h  editor.cpp  editor.h  plugincids.h  pluginentry.cpp  pluginparamids.h  processor.cpp  processor.h  version.h
